<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 Roberto Leinardi.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_date_range_black"
                    android:tint="@android:color/white"
                    android:layout_margin="4dp"
                    android:layout_weight="10"
                    android:contentDescription="@string/month_s_aggregate"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="35"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/monthly_agg_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/this_month"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        />
                    <TextView
                        android:id="@+id/txt_monthly_data_sales"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monthly_agg"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        />

                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_data_usage_white"
                    android:tint="@android:color/white"
                    android:contentDescription="@string/week_s_aggregate"
                    android:layout_margin="4dp"
                    android:layout_weight="10"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="35"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/weekly_agg_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/this_week"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        />
                    <TextView
                        android:id="@+id/txt_weekly_data_sales"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monthly_agg"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/btn_fast_scroll_transaction_to_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_arrow_downward_black_24dp"
                    android:tint="@android:color/white"
                    android:contentDescription="@string/scroll_to_bottom"
                    android:layout_margin="4dp"
                    android:layout_weight="10"
                    android:background="@android:color/transparent"
                    android:visibility="gone"
                    android:clickable="false"
                    />
                <ImageButton
                    android:id="@+id/btn_fast_scroll_transaction_to_top"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_arrow_upward_black_24dp"
                    android:tint="@android:color/white"
                    android:contentDescription="@string/scroll_to_top"
                    android:layout_margin="4dp"
                    android:layout_weight="10"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    />
            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
</merge>
